Rotas declaradas nos templates

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,7 +26,7 @@
             <button class='btn btn-primary w-100' type='submit'>Entrar</button>
           </form>
           <div class='mt-4 text-center'>
-            <p class='mb-0'>Não tem uma conta? <a class='text-decoration-none' href='#'>Cadastre-se</a>
+            <p class='mb-0'>Não tem uma conta? <a class='text-decoration-none' href='/register'>Cadastre-se</a>
             </p>
             <p><a class='text-decoration-none' href='#'>Esqueceu sua senha?</a></p>
           </div>
