--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -45,7 +45,7 @@
             <button class='btn btn-primary w-100' type='submit'>Criar conta</button>
           </form>
           <div class='mt-4 text-center'>
-            <p class='mb-0'>Já tem uma conta? <a class='text-decoration-none' href='#'>Entre</a></p>
+            <p class='mb-0'>Já tem uma conta? <a class='text-decoration-none' href='/login'>Entre</a></p>
           </div>
         </div>
       </div>
