--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header class='container mb-5'>
   <nav class='navbar navbar-expand-lg navbar-light bg-white'>
     <div class='container'>
-      <a class='navbar-brand' href='./index.html'>
+      <a class='navbar-brand' href='/'>
         Gulliver Traveller
       </a>
       <button aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation' class='navbar-toggler'
@@ -23,10 +23,10 @@
             <a class='nav-link text-dark' href='#'>Ajuda</a>
           </li>
           <li class='nav-item'>
-            <a class='nav-link text-dark' href='#'>Cadastrar-se</a>
+            <a class='nav-link text-dark' href='/register'>Cadastrar-se</a>
           </li>
           <li class='nav-item'>
-            <a class='nav-link text-dark' href='#'>Entrar</a>
+            <a class='nav-link text-dark' href='/login'>Entrar</a>
           </li>
         </ul>
       </div>
