Refatoração de código

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,11 +1,62 @@
 <footer class='footer pt-5'>
   <div class='container'>
     <div class='row'>
+      <div class='col-md-3'>
+        <h5 class='font-weight-bold'>Gulliver Traveller</h5>
+      </div>
+      <div class='col-md-2'>
+        <h5 class='mb-4 font-weight-bold'>Sobre</h5>
+        <ul class='list-unstyled'>
+          <li><a class='text-dark nav-link' href='#'>Como funciona o Gulliver</a></li>
+          <li><a class='text-dark nav-link' href='#'>Notícias</a></li>
+          <li><a class='text-dark nav-link' href='#'>Investidores</a></li>
+          <li><a class='text-dark nav-link' href='#'>Gulliver Plus</a></li>
+          <li><a class='text-dark nav-link' href='#'>Gulliver Luxe</a></li>
+          <li><a class='text-dark nav-link' href='#'>HotelTonight</a></li>
+          <li><a class='text-dark nav-link' href='#'>Gulliver for Work</a></li>
+          <li><a class='text-dark nav-link' href='#'>Oportunidades de trabalho</a></li>
+        </ul>
+      </div>
+      <div class='col-md-2'>
+        <h5 class='mb-4 font-weight-bold'>Comunidade</h5>
+        <ul class='list-unstyled'>
+          <li><a class='text-dark nav-link' href='#'>Diversidade e pertencimento</a></li>
+          <li><a class='text-dark nav-link' href='#'>Acessibilidade</a></li>
+          <li><a class='text-dark nav-link' href='#'>Gulliver Associates</a></li>
+          <li><a class='text-dark nav-link' href='#'>Convidar amigos</a></li>
+          <li><a class='text-dark nav-link' href='#'>Gulliver Magazine</a></li>
+        </ul>
+      </div>
+      <div class='col-md-2'>
+        <h5 class='mb-4 font-weight-bold'>Hospede uma casa</h5>
+        <ul class='list-unstyled'>
+          <li><a class='text-dark nav-link' href='#'>Hospede uma casa</a></li>
+          <li><a class='text-dark nav-link' href='#'>Hospede uma experiência</a></li>
+          <li><a class='text-dark nav-link' href='#'>Responda aos pedidos de reserva</a></li>
+          <li><a class='text-dark nav-link' href='#'>Hospedando com responsabilidade</a></li>
+          <li><a class='text-dark nav-link' href='#'>Centro de recursos</a></li>
+          <li><a class='text-dark nav-link' href='#'>Hospedagem temporária</a></li>
+        </ul>
+      </div>
+      <div class='col-md-3'>
+        <h5 class='mb-4 font-weight-bold'>Suporte</h5>
+        <ul class='list-unstyled'>
+          <li><a class='text-dark nav-link' href='#'>Nossas políticas</a></li>
+          <li><a class='text-dark nav-link' href='#'>Termos e privacidade</a></li>
+          <li><a class='text-dark nav-link' href='#'>Ajuda</a></li>
+          <li><a class='text-dark nav-link' href='#'>Soluções para casos especiais</a></li>
+          <li><a class='text-dark nav-link' href='#'>Segurança</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <div class='row'>
       <div class='col-md-8'>
         <ul class='list-inline small'>
           <li class='list-inline-item'><a class='text-dark nav-link' href='#'>© 2023 Gulliver, Inc.</a></li>
-          <li class='list-inline-item'><a class='text-dark nav-link' href='#'>Termos</a></li>
           <li class='list-inline-item'><a class='text-dark nav-link' href='#'>Privacidade</a></li>
+          <li class='list-inline-item'><a class='text-dark nav-link' href='#'>Termos</a></li>
+          <li class='list-inline-item'><a class='text-dark nav-link' href='#'>Mapa do site</a></li>
         </ul>
       </div>
       <div class='col-md-4'>
