Update layout forms

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -3,32 +3,26 @@
   <main class='container'>
     <div class='row justify-content-center'>
       <div class='col-md-8 col-lg-6'>
-        <div class='card p-4 shadow'>
+        <div class='card p-5 shadow'>
           <h2 class='mb-4 text-center'>Crie sua conta</h2>
           <form>
-            <div class='row'>
-              <div class='col-sm-6 mb-3'>
-                <label class='form-label' for='first-name-input'>Nome</label>
-                <input class='form-control' id='first-name-input' name='first-name' required type='text'>
-              </div>
-              <div class='col-sm-6 mb-3'>
-                <label class='form-label' for='last-name-input'>Sobrenome</label>
-                <input class='form-control' id='last-name-input' name='last-name' required type='text'>
-              </div>
+            <div class='form-group mb-3'>
+              <label class='form-label' for='full-name-input'>Nome Completo</label>
+              <input class='form-control' id='full-name-input' name='full-name' required type='text'>
             </div>
             <div class='form-group mb-3'>
               <label class='form-label' for='email-input'>Endereço de e-mail</label>
               <input aria-describedby='email-description' class='form-control' id='email-input' name='email'
                      pattern='^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$' required type='email'>
-              <small class='form-text text-muted' id='email-description'>Usaremos seu e-mail para comunicações
-                importantes sobre sua conta e reservas.</small>
+              <small class='form-text text-muted' id='email-description'>Comunicações importantes sobre sua conta e
+                reservas serão enviadas para o seu e-mail.</small>
             </div>
             <div class='form-group mb-3'>
               <label class='form-label' for='password-input'>Senha</label>
               <input aria-describedby='password-description' class='form-control' id='password-input' name='password'
                      pattern='^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$' required type='password'>
-              <small class='form-text text-muted' id='password-description'>A senha deve ter no mínimo 8 caracteres,
-                incluindo ao menos uma letra minúscula, uma letra maiúscula e um número.</small>
+              <small class='form-text text-muted' id='password-description'>A senha precisa ter pelo menos 8 caracteres
+                e incluir pelo menos uma letra minúscula, uma letra maiúscula e um número.</small>
             </div>
             <div class='form-group mb-3'>
               <label class='form-label' for='confirm-password-input'>Confirmar senha</label>
